KSCM-1727: Changed all of the Review Proposal inputs to textareas so that we can have line wrapping and whatnot. Resizing is now handled on page init. Fixed the styling a little.
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@67800 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -420,8 +420,7 @@
  */
 
 /* Remove the input styling */
-.review_readonly textarea:focus,
-.review_readonly input[type="text"]:focus {
+.review_readonly textarea:focus {
     outline: none;
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
@@ -429,8 +428,7 @@
     color: black;
 }
 
-.review_readonly textarea,
-.review_readonly input[type="text"] {
+.review_readonly textarea {
     background: none;
     border: none;
     -webkit-box-shadow: none;
@@ -446,8 +444,7 @@
 }
 
 .course_review_details-table th,
-.course_review_details-table td,
-.course_review_details-table input {
+.course_review_details-table td {
     padding: 2px 5px 0px 5px;
 }
 
